docs/Projet4/Rhouma_Walid_3_config_filtrage_062024/iptables/rules.txt.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Tue May 28 16:50:53 2024
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -j LOG --log-prefix "IPTABLES_INPUT: "
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -d 192.168.0.20/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.168.0.20/32 -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -d 192.168.0.20/32 -p tcp -m tcp --dport 5501 -j ACCEPT
-A INPUT -d 192.168.0.20/32 -p tcp -m tcp --dport 5502 -j ACCEPT
-A INPUT -d 150.10.0.10/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 150.10.0.10/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A INPUT -d 192.168.0.20/32 -p tcp -m tcp --dport 1024:65535 -j ACCEPT
COMMIT
# Completed on Tue May 28 16:50:53 2024
